add support for userspecified themes
